# TFG

./: AndroidManifest_cleartext_snippet.xml  CHAT_CONTEXT.md  ESQUEMAS_TFG.md  INFORME_IMU.md  MainActivity_patched.java  REFERENCIAS_OLAS_IMU.md  auto_tune_imu.py  auto_tune_state.json  capture_http_imu.py  generate_synthetic_imu_csv.py  imu_server.py  live_imu_http.py  process_imu_openmetbuoy.py  process_imu_session.py  process_imu_step_by_step.py  remove_wsl_portproxy_8000.bat  remove_wsl_portproxy_8001.bat  session_20260211_161358_30s.csv  session_20260211_162105_30s.csv  session_20260218_150759_30s.csv  session_20260218_155936_30s.csv  session_20260218_160043_30s.csv  session_20260218_160827_30s.csv  setup_wsl_portproxy_8000.bat  setup_wsl_portproxy_8001.bat  simtest_20260228_115948_6s.csv  simulate_imu_waves_http.py
android_app_boya/: settings.gradle.kts
android_app_boya/app/: build.gradle.kts
esp32/: CMakeLists.txt  README.md  attach_esp32_wsl.ps1  esp.sh  imu_diag_micropython.py  sdkconfig.defaults  sdkconfig.old  wsl_usb_esp32.sh
esp32/main/: CMakeLists.txt  main.cpp  main_diag_imu.cpp
modelo-tfg-fic-v1.6_2223xun/: memoria_tfg.aux  memoria_tfg.bbl  memoria_tfg.blg  memoria_tfg.fdb_latexmk  memoria_tfg.fls  memoria_tfg.glg  memoria_tfg.ist  memoria_tfg.lof  memoria_tfg.lot  memoria_tfg.out  memoria_tfg.tex  memoria_tfg.toc  memoria_tfg.xdv
modelo-tfg-fic-v1.6_2223xun/anexos/: adicional.aux  adicional.tex
modelo-tfg-fic-v1.6_2223xun/bibliografia/: bibliografia.bib
modelo-tfg-fic-v1.6_2223xun/contido/: conclusions.aux  conclusions.tex  demo.aux  demo.tex  (+12 more)
(+43 files in other folders)
